--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -1,3 +1,3 @@
-VITE_SERVICE_ID = service_hyyayqe;
-VITE_TEMPLATE_ID = template_e9ldkps;
-VITE_PUBLIC_KEY = zfpF2t2WfVjJ-mejz;
+VITE_SERVICE_ID=service_hyyayqe
+VITE_TEMPLATE_ID=template_e9ldkps
+VITE_PUBLIC_KEY=50xVbHvVSTsX08q0-
